RESOLVED FIXED59355
Fix web audio build on mac port
https://bugs.webkit.org/show_bug.cgi?id=59355
Summary Fix web audio build on mac port
Chris Rogers
Reported 2011-04-25 15:27:45 PDT
Fix web audio build on mac port
Attachments
Patch (4.51 KB, patch)
2011-04-25 15:30 PDT, Chris Rogers
kbr: review+
Chris Rogers
Comment 1 2011-04-25 15:30:51 PDT
Chris Rogers
Comment 2 2011-04-25 15:32:57 PDT
This patch removes a couple of duplicate entries in the Xcode project, fixes a missed renaming of "mark" -> "visit" and adds custom visit function for AudioContext which now is an EventTarget.
Kenneth Russell
Comment 3 2011-04-26 15:26:51 PDT
Comment on attachment 90957 [details] Patch Looks fine.
Chris Rogers
Comment 4 2011-04-26 16:11:59 PDT
Note You need to log in before you can comment on or make changes to this bug.