2011-04-26  Chris Rogers  <crogers@google.com>

Reviewed by Kenneth Russell.

        Fix web audio build on mac port
        https://bugs.webkit.org/show_bug.cgi?id=59355

        No new tests since audio API is not yet implemented.

        * WebCore.xcodeproj/project.pbxproj:
        * bindings/js/JSAudioContextCustom.cpp:
        (WebCore::JSAudioContext::visitChildren):
        * bindings/js/JSJavaScriptAudioNodeCustom.cpp:
        (WebCore::JSJavaScriptAudioNode::visitChildren):
        * webaudio/AudioContext.idl:


Canonical link: https://commits.webkit.org/74691@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@84969 268f45cc-cd09-0410-ab3c-d52691b4dbfc